AI-86: Fix styling issues and review compatibility issues with firefox

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
@@ -288,3 +288,136 @@
     width: 100% !important;
   }
 }
+
+
+
+.page-civicrm-contact {
+  .crm-activityLinks .select2-container {
+    .select2-choice {
+      background: none;
+      background: $crm-white;
+      border-radius: 2px;
+      line-height: 30px;
+      border: 1px solid $crm-darker-grayblue;
+      box-shadow: $crm-select2-box-shadow-inset;
+
+      .select2-chosen {
+        color: $crm-dark-blue;
+        font-family: $font-family-base;
+      }
+    }
+
+    .select2-arrow {
+      background: none;
+      padding: 0 5px;
+    }
+
+    .select2-search-choice-close {
+      right: 35px;
+    }
+  }
+
+  #mainTabContainer {
+    .crm-activity-selector-activity {
+      .dataTables_wrapper {
+        margin: 25px 0;
+
+        .dataTables_paginate {
+          width: 50% !important;
+        }
+      }
+
+      div[id*="DataTables_Table_"] table {
+        background: transparent;
+        border: none;
+        font-family: $font-family-base;
+
+        thead tr {
+          border-bottom: 1px solid $crm-dark-grayblue;
+
+          th {
+            border-bottom: none;
+            background: $gray-lighter !important;
+            color: $gray-darker;
+            vertical-align: middle;
+            border: none;
+            padding: 10px 20px;
+            line-height: 1.5em;
+
+            div {
+              padding: 0;
+            }
+          }
+        }
+
+        tbody tr {
+          background: $crm-white;
+          border-bottom: 1px solid $crm-background;
+          border-right: none;
+
+          td {
+            background: $crm-white;
+            color: $gray-dark;
+            border: none;
+            padding: 10px 20px;
+
+            a {
+              color: $brand-primary !important;
+            }
+          }
+        }
+      }
+
+      .accordion,
+      .crm-search_filters-accordion {
+        box-shadow: $box-shadow;
+      }
+
+      div[id*="s2id_autogen"] {
+        .select2-choice {
+          background: $crm-white;
+          border-radius: 2px;
+          border: 1px solid $crm-darker-grayblue;
+          box-shadow: $crm-select2-box-shadow-inset;
+        }
+
+        .select2-arrow {
+          background: none;
+          padding: 0 5px;
+        }
+      }
+
+      .crm-icon {
+        text-indent: 0 !important;
+        text-align: center;
+
+        &:before {
+          font-size: $font-size-base !important;
+          position: relative;
+          bottom: 2px;
+        }
+
+        &.Individual-icon {
+          background: none;
+          &:before {
+            @include fa-icon($content: "\f007");
+          }
+        }
+
+        &.Organization-icon {
+          background: none;
+          &:before {
+            @include fa-icon($content: "\f0f7");
+          }
+        }
+
+        &.Household-icon {
+          background: none;
+          &:before {
+            @include fa-icon($content: "\f015");
+          }
+        }
+      }
+    }
+  }
+}
