AI-23: Change help font type and buttons font size

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
@@ -66,4 +66,12 @@
       vertical-align: middle;
     }
   }
+
+  .help {
+    font-family: $font-family-base;
+  }
+
+  .action-link a.button {
+    font-size: $font-size-base !important;
+  }
 }
