AI-22: Adjust title font weight

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_export-contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_export-contact.scss
@@ -81,6 +81,7 @@
         th {
           padding-left: 20px;
           font-size: 18px;
+          font-weight: 600;
           color: $gray-darker;
           height: 47px;
           line-height: 47px;
