--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
@@ -571,6 +571,38 @@ $control-height: 30px;
       .select2-result-label {
         padding: 5px 10px;
         color: $gray-dark;
+
+        .crm-icon {
+          text-indent: 0 !important;
+          text-align: center;
+
+          &:before {
+            font-size: $font-size-base !important;
+            position: relative;
+            bottom: 2px;
+          }
+
+          &.Individual-icon {
+            background: none;
+            &:before {
+              @include fa-icon($content: "\f007");
+            }
+          }
+
+          &.Organization-icon {
+            background: none;
+            &:before {
+              @include fa-icon($content: "\f0f7");
+            }
+          }
+
+          &.Household-icon {
+            background: none;
+            &:before {
+              @include fa-icon($content: "\f015");
+            }
+          }
+        }
       }
 
       .select2-highlighted {
