AI-85: Applying different styling changes

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -259,6 +259,13 @@
           }
         }
       }
+
+      .crm-membership-form-block-contribution-contact {
+        .helpicon {
+          bottom: -1px;
+          left: 0;
+        }
+      }
     }
 
     #send-receipt {
