--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_buttons.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_buttons.scss
@@ -61,7 +61,8 @@ $button-border-radius: 2px;
 
   .crm-form-block {
     &.crm-search-form-block > .crm-submit-buttons,
-    &.crm-form-block > .crm-submit-buttons {
+    &.crm-form-block > .crm-submit-buttons,
+    .form-item > .crm-submit-buttons {
       @extend %submit-buttons-civi;
     }
 
