AI-74: Adjust checkbox alignment

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
@@ -239,8 +239,8 @@
       position: relative;
 
       &:after {
-        left:0 !important;
-        top: 17px !important;
+        left: 1px !important;
+        top: 22px !important;
       }
     }
   }
