PCHR-1911: Override ui-select placeholder color

--- a/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
@@ -58,6 +58,8 @@ $crm-white:             #FFF !default;
 
 $crm-dialog-container-border: #d3dee2;
 
+$placeholder:           #999999;
+
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
