--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_change-log.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_change-log.scss
@@ -11,71 +11,11 @@
   }
 
   table {
-    box-shadow: $box-shadow;
-  }
+    @include mx-expandable-table();
 
-  .columnheader {
-    border: none;
-    border-bottom: 1px solid $crm-dark-grayblue;
-
-    th {
-      padding: 20px;
-      font-weight: 600;
-      color: $gray-darker;
-      vertical-align: middle;
-      border-top-color: $gray-lighter;
-      text-transform: none;
-      font-family: $font-family-base;
-      border: none;
-    }
-  }
-
-  tr {
-    background: $crm-white;
-    border-bottom: 1px solid $crm-background;
-    border-right: none;
-
-    td {
-      background: $crm-white;
-      color: $gray-dark;
-      border: none;
-      padding: 10px 20px;
-      vertical-align: middle;
-
-      a {
-        color: $brand-primary !important;
-      }
-    }
-  }
-
-  .crm-icon {
-    text-indent: 0 !important;
-    text-align: center;
-
-    &:before {
-      font-size: $font-size-base !important;
-      position: relative;
-      bottom: 2px;
-    }
-
-    &.Individual-icon {
-      background: none;
-      &:before {
-        @include fa-icon($content: "\f007");
-      }
-    }
-
-    &.Organization-icon {
-      background: none;
-      &:before {
-        @include fa-icon($content: "\f0f7");
-      }
-    }
-
-    &.Household-icon {
-      background: none;
-      &:before {
-        @include fa-icon($content: "\f015");
+    .columnheader {
+      th {
+        padding: 15px 30px !important;
       }
     }
   }
