--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
@@ -7,6 +7,7 @@
     @extend %no-border-radius;
     position: relative;
     line-height: 40px;
+    font-family: $font-family-base;
     padding-top: 0;
     padding-bottom: 0;
     background-image: none !important;
