--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar.html
@@ -85,20 +85,20 @@
             <div class="col-sm-3">
               <div class="chr_leave-calendar__legend__entry">
                 <div class="chr_leave-calendar__item"
-                     ng-style="{backgroundColor: absenceType.color, borderColor: absenceType.color}"></div>
+                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"></div>
                 <span class="chr_leave-calendar__legend__label">{{absenceType.title}}</span>
               </div>
             </div>
             <div class="col-sm-3">
               <div class="chr_leave-calendar__legend__entry">
                 <div class="chr_leave-calendar__item"
-                     ng-style="{backgroundColor: absenceType.color, borderColor: absenceType.color}"><span>AM</span>
+                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"><span>AM</span>
                 </div>
                 <span class="chr_leave-calendar__legend__label">{{absenceType.title}} AM Only</span>
               </div>
               <div class="chr_leave-calendar__legend__entry">
                 <div class="chr_leave-calendar__item"
-                     ng-style="{backgroundColor: absenceType.color, borderColor: absenceType.color}"><span>PM</span>
+                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"><span>PM</span>
                 </div>
                 <span class="chr_leave-calendar__legend__label">{{absenceType.title}} PM Only</span>
               </div>
@@ -106,20 +106,20 @@
             <div class="col-sm-3">
               <div class="chr_leave-calendar__legend__entry">
                 <div class="chr_leave-calendar__item chr_leave-calendar__item--requested"
-                     ng-style="{backgroundColor: absenceType.color, borderColor: absenceType.color}"></div>
+                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"></div>
                 <span class="chr_leave-calendar__legend__label">Requested {{absenceType.title}}</span>
               </div>
             </div>
             <div class="col-sm-3">
               <div class="chr_leave-calendar__legend__entry">
                 <div class="chr_leave-calendar__item chr_leave-calendar__item--requested"
-                     ng-style="{backgroundColor: absenceType.color, borderColor: absenceType.color}"><span>AM</span>
+                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"><span>AM</span>
                 </div>
                 <span class="chr_leave-calendar__legend__label">Requested {{absenceType.title}} AM</span>
               </div>
               <div class="chr_leave-calendar__legend__entry">
                 <div class="chr_leave-calendar__item chr_leave-calendar__item--requested"
-                     ng-style="{backgroundColor: absenceType.color, borderColor: absenceType.color}"><span>PM</span>
+                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"><span>PM</span>
                 </div>
                 <span class="chr_leave-calendar__legend__label">Requested {{absenceType.title}} PM</span>
               </div>
