AI-77: Adjust page styling

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -13,6 +13,10 @@
   .solid-border-top {
     border-color: $crm-background;
   }
+
+  .crm-form-block {
+    border-radius: 2px !important;
+  }
 }
 
 .page-civicrm {
