--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_add-to-household.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_add-to-household.scss
@@ -42,19 +42,26 @@
   }
 
   fieldset {
-    padding: 0 20px;
+    padding: 0;
 
-    > legend {
-      padding-left: 0;
+    > legend,
+    > .description {
+      padding: 0 20px;
     }
 
     > table {
       @include mx-expandable-table();
       margin-top: 20px;
+      box-shadow: none !important;
 
       tr {
         &.columnheader {
           border: none !important;
+          border-bottom: 1px solid $crm-dark-grayblue !important;
+        }
+
+        td {
+          padding: 18px 10px 17px 10px !important;
         }
 
         &:not(.columnheader) {
