AI-72: Add advanced search selector

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/search/pages/_search.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/search/pages/_search.scss
@@ -1,4 +1,5 @@
-.CRM_Contact_Form_Search_Basic {
+.CRM_Contact_Form_Search_Basic,
+.CRM_Contact_Form_Search_Advanced {
   label {
     padding: 0 !important;
   }
